# neovim-plugin-copier-tpl

./: README.md  copier.yml  pyproject.toml
extensions/: context.py
{% if project_type == 'golang-cli' %}{{project_name}}{% endif %}/cmd/{{project_name}}/: main.go.jinja
{% if project_type == 'golang-cli' %}{{project_name}}{% endif %}/internal/internal-package/: internal-package.go.jinja
{% if project_type == 'neovim-plugin' %}{{project_name}}.nvim{% endif %}/: README.md
